# streamlit-chatbot

./: .dockerignore  Dockerfile  README.md  chat.py  dev.Dockerfile  docker-compose.yml  example.env  makefile  pyproject.toml  requirements.txt  search_and_chat.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: publish to packages-dev.yml  publish to packages.yml  publish.yml
other/: README.md  docker-compose.yml
streamlit_apps/: chat_url.py
test/: README.md  docker-compose.yml
