[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Bal Narendra Sapa <bnsapa2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.271"
streamlit = "^1.25.0"
huggingface-hub = "^0.16.4"
duckduckgo-search = "^3.8.5"
openai = "^0.27.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
